frontend/test/typecheck/error/nonbool-dowhile-cond.fc
void foo(int i) {
    do {} while (i);
}
